# ttyforce

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile.integration  LICENSE  Makefile  README.md
examples/: real-test.rs  try-fixture.rs
fixtures/hardware/: ethernet_1disk.toml  ethernet_1disk_nocarrier.toml  ethernet_4disk_same.toml  mixed_drives_homelab.toml  mixed_drives_server.toml  mixed_drives_workstation.toml  wifi_1disk.toml  wifi_crowded_1disk.toml  wifi_dead_ethernet_1disk.toml  wifi_dead_ethernet_4disk.toml  wifi_ethernet_1disk.toml  wifi_ethernet_4disk.toml
fixtures/playbooks/: abort_after_confirm.toml  abort_after_ethernet_online.toml  abort_after_wifi_connect.toml  abort_install.toml  dead_ethernet_falls_to_wifi.toml  ethernet_1disk_full_install.toml  ethernet_4disk_btrfs_raid5.toml  ethernet_4disk_zfs_raidz.toml  mixed_drives_workstation_raid5.toml  reboot_after_install.toml  wifi_1disk_full_install.toml  wifi_ethernet_prefers_ethernet.toml  wifi_scan_refresh.toml  wifi_signal_timeout.toml  wifi_wrong_password_retry.toml
fixtures/scenarios/: abort_install.toml  default_device_ethernet_first.toml  default_device_user_choice.toml  default_device_wifi_fallback.toml  ethernet_auto_detect.toml  full_install_ethernet_4disk.toml  full_install_wifi_1disk.toml  reboot_after_error.toml  wifi_qr_code.toml  wifi_select_connect.toml  wifi_select_refresh.toml  (+3 more)
integration/: run-tests.sh
src/: error.rs  lib.rs  main.rs  operations.rs  ssh.rs
tests/: cli_tests.rs  fixture_tests.rs  integration_tests.rs  mixed_disk_tests.rs  playbook_tests.rs  scenario_tests.rs
(+48 files in other folders)
