[package]
name = "ttyforce"
version = "0.2.0-beta3"
edition = "2021"
default-run = "ttyforce"
description = "Town OS installer TUI"
license = "MIT"
repository = "https://github.com/erikh/ttyforce"
homepage = "https://github.com/erikh/ttyforce"
readme = "README.md"
keywords = ["tui", "installer", "linux"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
zbus = { version = "5", features = ["blocking"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["net", "ioctl", "mount", "reboot", "socket", "fs"] }

[[bin]]
name = "ttyforce"
path = "src/main.rs"

[[bin]]
name = "detect-hardware"
path = "src/bin/detect-hardware.rs"

[dev-dependencies]
pretty_assertions = "1"
